tests/NormalTests/paczka1/fuzzy1/61541106.err
Error in line 6: 5OYsDjr S879 18,9
Error in line 16: yBgpo0JcKjq A558 97,7
Error in line 20: wF9g S879 95,4
Error in line 18: Lb5 A612 73,8
Error in line 24: wF9g S85 7,
Error in line 15: 5OYsDjr A558 34,7
Error in line 26: Lb5 A558 13,0
Error in line 27: Lb5 S851 10,6
Error in line 28: Lb5 S879 55,2
Error in line 30: Lb5 A558 95,0
